# gym-manager

./: Makefile  Makefile.am  Makefile.in  centre.txt  config.h  config.status  configure  configure.in  course.txt  doc.txt  interfaces.glade  interfaces.glade.bak  interfaces.gladep.bak
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Requests.txt  Speciality.txt  callbacks.c  callbacks.h  coach.c  coach.h  coach.txt  course.c  course.h  course.txt  doc.txt  equipment.c  equipment.h  event.c  event.h  interface.c  interface.c.bak  interface.h  interface.h.bak  interfaces  main.c  member.c  member.h  type.txt
src/.deps/: callbacks.Po  coach.Po  course.Po  equipment.Po  event.Po  member.Po
